--- a/src/main/resources/templates/admin.mustache
+++ b/src/main/resources/templates/admin.mustache
@@ -10,7 +10,7 @@
 <body>
 <div class="center">
     <form method="post">
-        <input type="text" name="fullName" placeholder="Назание ноутбука">
+        <input type="text" name="fullName" placeholder="Название ноутбука">
         <input type="text" name="vendor" placeholder="Производитель">
         <input type="text" name="series" placeholder="Серия">
         <input type="text" name="laptopsModel" placeholder="Модель">
@@ -18,7 +18,7 @@
     </form>
 
 </div>
-<div class="center">Поиск ноутбука</div>
+<div class="center">Поиск ноутбука </div>
 <form method="post" action="filter" class="center">
     <input type="text" name="filter">
     <button type="submit">Найти</button>
